Modified test
